@@ -639,7 +639,9 @@ void delete_ioa_timer(ioa_timer_handle th)
 
 int ioa_socket_check_bandwidth(ioa_socket_handle s, size_t sz, int read)
 {
-	if(s && (s->e) && sz && ((s->sat == CLIENT_SOCKET) || (s->sat == LISTENER_SOCKET)) && (s->session)) {
+	if(s && (s->e) && sz &&
+		((s->sat == CLIENT_SOCKET) || (s->sat == RELAY_SOCKET) || (s->sat == RELAY_RTCP_SOCKET)) &&
+		(s->session)) {
 
 		band_limit_t max_bps = s->session->bps;
 
